--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,6 +15,7 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" >
 
        <RelativeLayout
+           android:id="@+id/search_layout"
            android:background="@drawable/search_bg"
            android:layout_marginEnd="30dp"
            android:padding="5dp"
@@ -27,6 +28,7 @@
              android:layout_height="wrap_content" />
 
            <ImageView
+               android:id="@+id/search_button"
                android:scaleType="centerCrop"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_search"
