--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#FF5252</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#913535</color>
+    <color name="colorPrimaryDark">#b45050</color>
+    <color name="colorAccent">#717171</color>
+    <color name="gray">#c8c8c8</color>
     <color name="white">#ffffff</color>
 </resources>
