--- a/app/src/main/res/layout/content_home_main.xml
+++ b/app/src/main/res/layout/content_home_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ingeniumbd.buyerapp.activities.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.ingeniumbd.buyerapp.activities.HomeMainActivity"
+    tools:showIn="@layout/app_bar_home_main">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +14,6 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.ingeniumbd.buyerapp.activities.MainActivity" />
+        tools:context="com.ingeniumbd.buyerapp.activities.HomeMainActivity" />
 
 </FrameLayout>
