--- a/app/src/main/res/layout/activity_main_rightnav.xml
+++ b/app/src/main/res/layout/activity_main_rightnav.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="com.ingeniumbd.buyerapp.activities.Main2Activity">
+    tools:context="com.ingeniumbd.buyerapp.activities.MainRightnavActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             tools:openDrawer="end">
 
             <include
-                layout="@layout/app_bar_main"
+                layout="@layout/app_bar_home_main"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize" />
 
