--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:showIn="@layout/app_bar_das">
+    tools:showIn="@layout/app_bar_dashboard">
 
     <LinearLayout
         android:layout_width="match_parent"
